# whispy

./: .gitignore  README.md  flake.nix  pyproject.toml
src/: whispy.py
